# talk-server

connect-server/: .gitignore  pyproject.toml
connect-server/connect/server/: __init__.py  api.py  broker.py  client.py  protocol.py  server.py
connect-server/connect/server/etc/: server.cfg.toml
connect-server/connect/server/script/: client.py  server.py
connect-server/connect/server/testing/: mq.py
talk-server/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
talk-server/talk/server/: api.py  broker.py  client.py  server.py  struct.py
talk-server/talk/server/entrypoint/: client.py
talk-server/talk/server/etc/: server.cfg.toml
talk-server/talk/server/script/: client.py  server.py
