[tool.poetry]
name = "talk-server"
version = "0.0.0"
description = "\"Talk\" Messanger Server"
readme = "README.md"
authors = ["Martynov Alexandr <triplustr@mail.ru>"]
packages = [
    {include = "talk"},
]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
msgspec = "^0.14.0"
aioconsole = "^0.6.1"
typing-extensions = "^4.5.0"

[tool.poetry.scripts]
talk-server = 'talk.server.entrypoint.server:run'
talk-client = 'talk.server.entrypoint.client:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
